Update to Minecraft 1.21.5.